RESOLVED FIXED 181142
REGRESSION (r225122): fePointLights don't work
https://bugs.webkit.org/show_bug.cgi?id=181142
Summary REGRESSION (r225122): fePointLights don't work
Simon Fraser (smfr)
Reported 2017-12-22 20:56:33 PST
Created attachment 330157 [details] Test case Attached file renders the point light in Chrome and FF, but not in WebKit.
Attachments
Test case (1.11 KB, text/html)
2017-12-22 20:56 PST, Simon Fraser (smfr)
no flags
Patch (6.85 KB, patch)
2017-12-29 08:32 PST, Simon Fraser (smfr)
no flags
Patch (8.05 KB, patch)
2017-12-30 21:16 PST, Simon Fraser (smfr)
dbates: review+
Simon Fraser (smfr)
Comment 1 2017-12-22 21:51:14 PST
Fails in STP 46, works in 17A405
Radar WebKit Bug Importer
Comment 2 2017-12-22 21:51:36 PST
Simon Fraser (smfr)
Comment 3 2017-12-29 08:32:22 PST
EWS Watchlist
Comment 4 2017-12-29 08:33:49 PST
Attachment 330254 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/svg/RenderSVGResourceFilter.cpp:45: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:10: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 3 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 5 2017-12-30 21:16:22 PST
Simon Fraser (smfr)
Comment 6 2017-12-30 21:17:10 PST
Patch depends on patch in bug 181196.
Simon Fraser (smfr)
Comment 7 2018-01-01 12:33:14 PST
Note You need to log in before you can comment on or make changes to this bug.